--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@
   --shade--20--color: #0f335d;
   --tint--10--color: #2b5382;
   --tint--20--color: #426690;
-  --gray-color: #eef4ed;
+  --gray-color: #d0d9e3;
   --black-color: #0b0b0b;
   --white-color: #fbfbfb;
   --error-color: #f54135;
@@ -99,11 +99,11 @@ select {
 }
 h1 {
   font-size: 3.2rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
 }
 h2 {
   font-size: 2.4rem;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
 }
 
 /*************/
@@ -130,7 +130,21 @@ h2 {
   backdrop-filter: blur(0.3rem);
   z-index: 5;
 }
-
+.container--grid {
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-rows: 80px auto 40px;
+  grid-template-areas:
+    "header header"
+    "sidebar main"
+    "footer main";
+  min-height: 100vh;
+}
+.center--row {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
 /**************/
 /* COMPONENTS */
 /**************/
@@ -310,15 +324,57 @@ dialog::backdrop {
 }
 
 /* HEADER ************************/
+.header--section {
+  grid-area: header;
+
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  /* el contenedor solo tendrá 80% para ocupar
+  el padding ocupara el 10% a ambos lados */
+  padding-left: calc(10%);
+  padding-right: calc(10%);
+}
+.header--section a:link,
+.header--section a:visited {
+  color: var(--white-color);
+  text-decoration: none;
+}
+.header--section svg {
+  width: 4.8rem;
+  height: 4.8rem;
+}
+.header--user--box p {
+  font-size: 1.6rem;
+}
 /* SIDEBAR ***********************/
+.sidebar--section {
+  grid-area: sidebar;
+
+  background-color: var(--primary-color);
+  padding: 2rem;
+}
 /* MAIN **************************/
+.main--section {
+  grid-area: main;
+
+  padding: 2rem;
+}
 /* FOOTER ************************/
 /* footer login and others footers */
-.footer--login--section {
+.footer--login--section,
+.footer--section {
+  grid-area: footer;
+
   background-color: var(--primary-color);
   color: var(--white-color);
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 1.4rem;
+}
+.footer--section {
+  background-color: var(--shade--20--color);
 }
