--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,17 @@
-/*
- * --- 01 TYPOGRAPHY SYSTEM
-
- * - Font sizes (px)
-  10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
- * - Font sizes (rem)
-  0.625 / 0.75 / 0.875 / 1 / 1.125 / 1.25 / 1.5 / 1.875 / 2.25 / 2.75 / 3.25 / 3.875 / 4.625 / 5.375 / 6.125
-
- * - Font weights
-  Default: 400
-
- * - Line heights
-  Default: 1
-
- * --- 02 COLORS
-
-  - Primary: #.......
-
-  - Tints (Primary dark): #.......
-  - Shades (Primary light): #.......
-  - Accents: #.......
-  - Greys: #.......
-
- * --- 05 SHADOWS
-
- * --- 06 BORDER-RADIUS
-
- * --- 07 WHITESPACE
-
- * - Spacing System (px)
-  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-*/
-
-/*****************/
-/* VARIABLES CSS */
-/*****************/
-
 :root {
-  --max-width-desktop: 1200px;
-  /*----- COLORS -----*/
-  --primary-color: #134074;
-  --shade--10--color: #113a68;
-  --shade--20--color: #0f335d;
-  --tint--10--color: #2b5382;
-  --tint--20--color: #426690;
-  --gray-color: #eef4ed;
-  --black-color: #0b0b0b;
-  --white-color: #fbfbfb;
-  --error-color: #f54135;
-  --warning-color: #fba018;
-  --success-color: #38ce47;
-  --shadow-color: #00000040; /* RGB (0 0 0 / 40%) */
-  /*----- TYPOGRAPHY -----*/
+  --color-primary: #facc15;
+  /* --color-secondary: #ffffff; */
+  --color-gray: #fefce8;
+  --color-black: #000;
+  --color-white: #fff;
+  --color-btn-delete: #e95448;
+  --color-btn-update: #2e828e;
+  --fuente: "Inter", sans-serif;
+  --max-width: 1200px;
 }
-
-/*************/
-/* RESET CSS */
-/*************/
-
+/*************************************************/
+/** Reset CSS ************************************/
+/*************************************************/
 *,
 *::before,
 *::after {
@@ -65,260 +20,201 @@
   padding: 0;
 }
 html {
-  /* font-size: 10px; */
-  /* 10px / 16px = 0.625 => 62.5% */
-  font-size: 62.5%;
-  font-weight: 400;
-  line-height: 1.5; /* Accesible line-height */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, sans-serif;
+  background-color: var(--color-gray);
+  font-family: var(--fuente);
+  color: var(--color-black);
+  font-size: 16px;
 }
 body {
-  /* background-color: #202020;
-  color: #fff; */
-  background-color: var(--gray-color);
-  /* position: relative; */
+  /* display: flex;
+  flex-direction: column;
+  min-height: 100vh; */
+  /* display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto 1fr auto; */
 }
-img,
-picture,
-video,
-canvas,
-svg {
-  display: block;
-  max-width: 100%;
-}
-/*
- Hereden las propiedades del elemento padre
- en lugar de los definidos por el navegador
-*/
-label,
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-h1 {
-  font-size: 3.2rem;
-  margin-bottom: 1rem;
+
+main {
+  /* PARA HACER QUE EL MAIN OCUPE TODO EL ESPACIO DEL BODY - FLEXBOX */
+  flex: 1;
 }
 h2 {
-  font-size: 2.4rem;
-  margin-bottom: 2rem;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 45px;
 }
-
-/*************/
-/* UTILITIES */
-/*************/
-.shadow--1 {
-  box-shadow: var(--shadow-color) 0px 54px 55px, var(--shadow-color) 0px -12px 30px,
-    var(--shadow-color) 0px 4px 6px, var(--shadow-color) 0px 12px 13px,
-    var(--shadow-color) 0px -3px 5px;
-}
-.radius--sm {
-  border-radius: 0.9rem;
-}
-.hidden {
-  display: none;
-}
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--shadow-color);
-  backdrop-filter: blur(0.3rem);
-  z-index: 5;
-}
-
-/**************/
-/* COMPONENTS */
-/**************/
-.btn {
-  cursor: pointer;
-  transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-  outline: none;
-  font-size: 1.6rem;
-  padding: 0.8rem 2.4rem;
-  border: none;
-}
-.btn--link:link {
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.btn--link:visited {
-  color: var(--black-color);
-}
-.btn--full {
-  background-color: var(--primary-color);
-  color: var(--white-color);
-}
-.btn--full:hover,
-.btn--full:active {
-  background-color: var(--white-color);
-  color: var(--primary-color);
-  box-shadow: inset 0 0 0 2px var(--primary-color);
-}
-.btn--outline {
-  background-color: var(--white-color);
-  color: var(--primary-color);
-}
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: var(--gray-color);
-  box-shadow: inset 0 0 0 2px var(--primary-color);
-}
-.btn--icon--primary {
-  border: 0;
-  background-color: var(--error-color);
-  color: var(--white-color);
-  /* padding: 0.5rem; */
-}
-.btn--icon--primary:hover,
-.btn--icon--primary:active {
-  color: var(--error-color);
-  background-color: var(--white-color);
-}
-.btn--small {
-  /* height: 4rem; */
-  padding: 0.6rem 1.2rem;
-  font-size: 14px;
-}
-.btn--medium {
-  /* height: 4.8rem; */
-  padding: 1rem 2rem;
-  font-size: 1.6rem;
-}
-/**************/
-/* CUSTOM CSS */
-/**************/
-
-/* LOGIN ********************/
-.container--login {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto 4rem;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "main"
-    "footer";
-  min-height: 100vh;
-}
-.main--login--section {
-  grid-area: main;
-  display: grid;
-  place-items: center;
-}
-.footer--login--section {
-  grid-area: footer;
-}
-.login {
-  /* max-width: var(--max-width-desktop); */
-  max-width: 90rem;
-  max-height: 50rem;
-  /* TODO: investigar como trabaja el min-width */
-  min-width: 40rem;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  background-color: var(--white-color);
-}
-.login--img--box {
-  width: 100%;
-  max-width: 90rem;
-  height: 50rem;
-  overflow: hidden;
-  position: relative;
-}
-.login--img {
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
-  object-position: center;
-}
-/* Style FORM login *****************************/
-.login--form--box {
+/*************************************************/
+/* Utilidades */
+/*************************************************/
+.container {
+  /* margin: auto;
+  max-width: var(--max-width); */
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 3rem;
+  min-height: 100vh;
 }
-.login--form {
-  width: 80%;
-  display: grid;
-  gap: 1rem;
+.none {
+  display: none;
 }
-.login--form > label,
-.login--form > input {
-  font-size: 1.6rem;
-  padding: 0 1.2rem;
-  cursor: pointer;
+.hidden {
+  visibility: hidden;
 }
-.login--form > input {
-  background-color: var(--gray-color);
-  height: 4rem;
-  border: 0;
+.button--user {
 }
-.login--form > input[type="password"] {
-  margin-bottom: 1.2rem;
+.button--modify {
+  background-color: var(--color-btn-update);
 }
-.login--form > input:focus {
-  outline: var(--primary-color);
+.button--delete {
+  background-color: var(--color-btn-delete);
 }
-
-/* Style MODAL login *****************************/
-.modal--login--section {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  /* width: 50%; */
-  width: 45rem;
-  /* height: 60rem; */
-
-  background-color: var(--white-color);
-  padding: 3rem;
-  border-radius: 0.5rem;
-  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
-  border: 0;
-  z-index: 10;
+.button--search {
 }
-/* fondo oscuro con 'blur' */
-dialog::backdrop {
-  background-color: var(--shadow-color);
-  backdrop-filter: blur(0.3rem);
-}
-.modal--login--section > header {
-  margin-bottom: 2rem;
-}
-.modal--login--section > header > h2 {
+.button--primary--form {
+  font-weight: bold;
+  background-color: var(--color-boton-aceptar);
+  border: none;
+  margin-bottom: 10px;
+  padding: 10px 20px;
   display: block;
-  text-align: center;
-  margin: 0;
-}
-.modal--login--section > header > button {
-  position: relative;
-  left: calc(100% - 3rem);
-}
-.modal--login--section > form {
   width: 100%;
+  border-radius: 3px;
+}
+.button--secondary--form {
+  background-color: transparent;
+  border: none;
+  margin-bottom: 10px;
+  padding: 10px 20px;
+  display: block;
+  width: 100%;
+  border-radius: 3px;
 }
 
-/* HEADER ************************/
-/* SIDEBAR ***********************/
-/* MAIN **************************/
-/* FOOTER ************************/
-/* footer login and others footers */
-.footer--login--section {
-  background-color: var(--primary-color);
-  color: var(--white-color);
+.button--reset--form {
+}
+/*************************************************/
+/* Estilos del sitio */
+/*************************************************/
+/*************************************************/
+/* GRID */
+/*************************************************/
+/* HEADER */
+/*************************************************/
+.header {
+  background-color: var(--color-secondary);
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+.header--container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.header--title {
+  font-size: 2rem;
+}
+.logo {
+  width: 5rem;
+}
+/*************************************************/
+/* HEADER BUTTONS */
+/*************************************************/
+.header--buttons {
+  /* display: flex; */
+}
+button[class="btn--user"],
+button[class="btn--search"] {
+  border-radius: 50%;
+  border: 1px solid var(--color-black);
+  width: 40px;
+  height: 40px;
+}
+/*************************************************/
+/* SIDEBAR */
+/*************************************************/
+.sidebar {
+  background-color: var(--color-primary);
+}
+.sidebar ul li {
+  margin-bottom: 15px;
+}
+.sidebar ul li a {
+  text-decoration: none;
+  color: var(--color-black);
+  font-size: 18px;
+}
+/*************************************************/
+/* MAIN */
+/*************************************************/
+.login {
+  display: flex;
+  align-items: center;
+}
+/*************************************************/
+/* FORM LOGIN */
+/*************************************************/
+.login--form {
+  width: 300px;
+  margin: 0 auto;
+  padding: 30px;
+}
+.form-label {
+  display: block;
+  margin-bottom: 5px;
+}
+.form-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+.button--primary--form:hover {
+  border: 3px solid var(--color-boton-aceptar);
+}
+.button--secondary--form:hover {
+  font-weight: bold;
+  border-bottom: 3px solid var(--color-boton-aceptar);
+}
+/*************************************************/
+/* TABLE */
+/*************************************************/
+
+
+.table {
+  width: 1000px;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+.table th,
+.table td {
+  padding: 5px 5px;
+}
+thead th {
+  background-color: var(--color-secondary);
+}
+tbody tr:nth-child(even) {
+  background-color: var(--color-secundario-alpha);
+}
+/*************************************************/
+/* FOOTER */
+/*************************************************/
+.footer {
+  background-color: var(--color-primary);
+  margin-top: auto;
+  height: 5vh;
+  /* centrar <p> */
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1.4rem;
 }
+.footer p {
+  font-size: 14px;
+}
+
+/*
+ * Mobil <= 480px
+ * Tablet <= 834px
+ * Desktop <= 1440px || <= 1200px
+ */
+
