--- a/assets/css/test-grid.css
+++ b/assets/css/test-grid.css
@@ -65,7 +65,7 @@ h2 {
   display: grid;
   /* columnas responsivas */
   /* grid-template-columns: repeat(auto-fit, minmax(20%, 1fr)); */
-  grid-template-columns: 15vw auto;
+  grid-template-columns: 280px auto;
   grid-template-rows: 80px auto 40px;
   gap: 0px 0px;
   grid-auto-flow: row;
@@ -237,11 +237,8 @@ h2 {
   text-decoration: none;
   color: var(--color-white);
 }
-.header--user svg {
+.header--user img {
   width: 48px;
-  height: 48px;
-  fill: var(--color-primary);
-  stroke: var(--color-white);
 }
 /* SIDEBAR ********************************************/
 .sidebar {
@@ -259,15 +256,8 @@ h2 {
   height: 44px;
   width: 200px;
   outline: none;
-  margin: 30px auto;
+  margin: 0 auto; /*Para centrar el boton*/
 }
-/* .search--form {
-  display: flex;
-}
-.search--form > input {
-  height: 40px;
-} */
-
 .search--bar {
   align-items: center; /* Alinea imagen y texto al centro verticalmente */
   all: unset;
@@ -282,10 +272,6 @@ h2 {
   border: none;
   outline: none;
 }
-.search--btn img {
-  width: 24px;
-  height: 24px;
-}
 .button--aside {
   display: flex;
   align-items: center; /* Alinea imagen y texto al centro verticalmente */
@@ -299,7 +285,6 @@ h2 {
   border-radius: 9px;
   /* border: 2px solid #8498a9; */
   width: 200px;
-  width: 80%;
   /* height: 44px; */
   margin-bottom: 20px;
   font-size: 16px;
@@ -330,20 +315,41 @@ h2 {
   margin-right: 10px;
 }
 /* MAIN *********************************************/
-main {
+/* main {
   max-width: 100%;
   margin: 50px auto;
   padding: 20px;
-  /* border-radius: 8px; */
-}
+} */
 .main {
   flex-grow: 1;
-  display: flex;
+  padding: 20px;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   max-width: var(--max-width);
   margin: 0 auto;
-  text-align: center;
+  text-align: center; */
+}
+.main--header--container {
+  display: grid;
+  grid-template-columns: 1fr 400px;
+  grid-template-rows: 50px 50px;
+  grid-template-areas:
+    "title title"
+    "search buttons";
+  row-gap: 10px;
+  justify-items: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.main--header--title--box {
+  grid-area: title;
+}
+.main--header--search--box {
+  grid-area: search;
+}
+.main--header--buttons--box {
+  grid-area: buttons;
 }
 
 /* LOGIN MAIN *********************************************/
@@ -393,9 +399,15 @@ main {
 }
 
 /* OTHERS *********************/
-input[type="text"],
+/* input[type="text"],
 input[type="number"],
 select {
+  padding: 5px;
+  width: 25vh;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+} */
+.input--select {
   padding: 5px;
   width: 25vh;
   border: 1px solid #ccc;
@@ -464,7 +476,7 @@ input[type="reset"]:hover {
 }
 /* TABLE */
 .table {
-  width: 1000px;
+  /* width: 1000px; */
   margin: 0 auto;
   border-collapse: collapse;
 }
@@ -478,6 +490,11 @@ thead th {
 tbody tr:nth-child(even) {
   background-color: var(--color-secundario-alpha);
 }
+.btn--icon {
+  padding: 6px 12px;
+  cursor: pointer;
+  border: 0;
+}
 /* FOOTER *********************************************/
 .footer--login,
 .footer {
@@ -490,8 +507,4 @@ tbody tr:nth-child(even) {
 }
 footer p {
   font-size: 14px;
-}
-
-.btn--icon {
-  border-radius: 50%;
 }
