--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,7 @@ h2 {
   z-index: 5;
 }
 .container--grid {
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 250px 1fr;
   grid-template-rows: 80px auto 40px;
@@ -138,7 +139,6 @@ h2 {
     "header header"
     "sidebar main"
     "footer main";
-  min-height: 100vh;
 }
 .center--row {
   display: flex;
@@ -334,18 +334,23 @@ dialog::backdrop {
 
   /* el contenedor solo tendrá 80% para ocupar
   el padding ocupara el 10% a ambos lados */
-  padding-left: calc(10%);
-  padding-right: calc(10%);
+  /* padding-left: calc(10%); */
+  /* padding-right: calc(10%); */
+  padding: 0 4.8rem;
 }
 .header--section a:link,
 .header--section a:visited {
   color: var(--white-color);
   text-decoration: none;
 }
-.header--section svg {
+.header--section span {
+  font-size: 2.4rem;
+  font-weight: 600;
+}
+/* .header--section svg {
   width: 4.8rem;
   height: 4.8rem;
-}
+} */
 .header--user--box p {
   font-size: 1.6rem;
 }
