update styles for SEARCH in SIDEBAR - inventario.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,34 +368,50 @@ dialog::backdrop {
 }
 .search--bar {
   width: 100%;
-  height: 3rem;
+  height: 3.6rem;
   padding: 0.8rem 3.6rem;
+
+  display: flex;
+
   font-size: 1.6rem;
   border: solid 0.1rem var(--white-color);
   border-radius: 0.8rem;
 }
 .search--icon {
-  padding-left: 1.2rem;
-
+  /* padding-left: 1.2rem; */
+  padding-inline-start: 1.2rem;
   cursor: pointer;
+  border: 0px solid transparent;
+  line-height: 2.4rem;
+  border-radius: 0.8rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   position: absolute;
   top: 0;
-  left: 0;
+  bottom: 0;
+}
+.search--icon svg {
+  display: block;
 }
 .btn--search {
+  appearance: button;
+  border: 0px solid transparent;
   position: absolute;
+  top: 1px;
+  bottom: 1px;
+  inset-inline-end: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 3.6rem;
 
   cursor: pointer;
-  font-family: inherit;
-  font-feature-settings: inherit;
-  font-variation-settings: inherit;
-  font-size: 100%;
-  font-weight: inherit;
-  line-height: inherit;
-  letter-spacing: inherit;
-  color: inherit;
   background-color: transparent;
+  border-radius: 0.8rem;
   margin: 0;
   padding: 0;
 }
@@ -412,6 +428,7 @@ dialog::backdrop {
   color: var(--white-color);
   text-decoration: none;
   font-size: 1.6rem;
+  font-weight: 500;
 }
 
 /* MAIN **************************/
