add styles for HEADER-SEARCH in MAIN - inventario.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,6 +437,27 @@ dialog::backdrop {
 
   padding: 2rem;
 }
+/* MAIN HEADER ------------------------------- */
+.main--section header {
+  margin-bottom: 3.6rem;
+}
+.main--section h1 {
+  font-size: 3.6rem;
+  text-align: center;
+  margin-bottom: 2.4rem;
+}
+/* MAIN HEADER SEARCH ------------------------------- */
+.main--section form {
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.4rem;
+}
+.main--section form select {
+  width: 20rem;
+  height: 2.4rem;
+}
 /* FOOTER ************************/
 /* footer login and others footers */
 .footer--login--section,
