--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,9 @@ dialog::backdrop {
 /* MAIN HEADER ------------------------------- */
 .main--section header {
   margin-bottom: 3.6rem;
+  background-color: var(--white-color);
+  border-radius: 0.9rem;
+  padding: 2.4rem;
 }
 .main--section h1 {
   font-size: 3.6rem;
