--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ select {
   font: inherit;
 }
 h1 {
-  font-size: 3.2rem;
+  /* font-size: 3.2rem; */
   /* margin-bottom: 1rem; */
 }
 h2 {
@@ -162,6 +162,12 @@ h2 {
   background-color: #38ce4720;
   color: var(--success-color);
 }
+.grid {
+  display: grid;
+}
+.grid--2--cols {
+  grid-template-columns: 1fr 1fr;
+}
 /*------------------------------------------------------------------------------------------------*/
 /* COMPONENTS */
 /*------------------------------------------------------------------------------------------------*/
@@ -172,7 +178,7 @@ h2 {
   display: inline-block;
   outline: none;
   font-size: 1.6rem;
-  padding: 0.8rem 2.4rem;
+  /* padding: 0.8rem 2.4rem; */
   border: none;
 }
 .btn--link:link {
@@ -203,16 +209,32 @@ h2 {
   background-color: var(--gray-color);
   box-shadow: inset 0 0 0 2px var(--primary-color);
 }
-.btn--icon--primary {
+.btn--icon {
+  height: auto;
+  border: 0;
+  border-radius: 0.5rem;
+  padding: 0.6rem 1.2rem;
+}
+.btn--delete {
   border: 0;
   background-color: var(--error-color);
   color: var(--white-color);
   /* padding: 0.5rem; */
 }
-.btn--icon--primary:hover,
-.btn--icon--primary:active {
+.btn--delete:is(:hover, :active) {
   color: var(--error-color);
   background-color: var(--white-color);
+  box-shadow: inset 0 0 0 0.12rem var(--error-color);
+}
+.btn--update {
+  border: 0;
+  background-color: var(--warning-color);
+  color: var(--white-color);
+}
+.btn--update:is(:hover, :active) {
+  color: var(--warning-color);
+  background-color: var(--white-color);
+  box-shadow: inset 0 0 0 0.12rem var(--warning-color);
 }
 .btn--small {
   /* height: 4rem; */
@@ -476,6 +498,7 @@ dialog::backdrop {
   padding: 2rem;
   max-width: 140rem;
   margin: 0 auto;
+  width: 100%;
 }
 /* MAIN HEADER -----------------------------------------------------------------------------------*/
 .main--section header {
@@ -484,11 +507,16 @@ dialog::backdrop {
   border-radius: 0.9rem;
   padding: 2.4rem;
 }
-.main--section h1 {
+.title {
   font-size: 3.6rem;
   text-align: center;
-  margin-bottom: 2.4rem;
+  /* margin-bottom: 1.6rem; */
 }
+/* agregar un margin-bottom cuando dentro del header exista un div con clase 'search--filters */
+.main--section header:has(div.search--filters) {
+  margin-bottom: 1.6rem;
+}
+
 /* SEARCH FILTER ---------------------------------------------------------------------------------*/
 .main--section form {
   font-size: 1.6rem;
@@ -496,6 +524,8 @@ dialog::backdrop {
   justify-content: center;
   align-items: center;
   gap: 2.4rem;
+
+  margin-top: 1.6rem;
 }
 .main--section form select {
   width: 20rem;
@@ -529,6 +559,13 @@ tbody tr:nth-child(even) {
 }
 tbody tr:hover {
   background-color: #fbfbfb90;
+}
+/* FORM ADD, UPDATE -----------------------------------------------------------------------------------------*/
+.main--section .form--add--product {
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 /*------------------------------------------------------------------------------------------------*/
