add styles for FORM-ADD-PRODUCT - agregar_producto.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,12 @@ h2 {
     var(--shadow-color) 0px 4px 6px, var(--shadow-color) 0px 12px 13px,
     var(--shadow-color) 0px -3px 5px;
 }
+.margin--bottom--sm {
+  margin-bottom: 0.8rem;
+}
+.margin--bottom--md {
+  margin-bottom: 1.6rem;
+}
 .radius--sm {
   border-radius: 0.9rem;
 }
@@ -143,7 +149,18 @@ h2 {
 .center--row {
   display: flex;
   align-items: center;
+}
+.gap--1 {
+  gap: 0.4rem;
+}
+.gap--2 {
+  gap: 0.8rem;
+}
+.gap--3 {
   gap: 1.2rem;
+}
+.gap--4 {
+  gap: 1.6rem;
 }
 .status {
   display: inline-block;
@@ -168,18 +185,31 @@ h2 {
 .grid--2--cols {
   grid-template-columns: 1fr 1fr;
 }
+.grid--4--cols {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+.grid--6--cols {
+  grid-template-columns: repeat(6, minmax(0, 1fr));
+}
 /*------------------------------------------------------------------------------------------------*/
 /* COMPONENTS */
 /*------------------------------------------------------------------------------------------------*/
 .btn {
+  display: inline-block;
+  padding: 0.8rem 1.6rem;
+  font-size: 1.6rem;
+  border: none;
+  outline: 0;
   cursor: pointer;
   transition: all 0.3s ease;
-  position: relative;
-  display: inline-block;
-  outline: none;
-  font-size: 1.6rem;
-  /* padding: 0.8rem 2.4rem; */
-  border: none;
+}
+.btn--full {
+  display: block;
+  width: 100%;
+}
+.btn--icon {
+  border-radius: 0.5rem;
+  padding: 0.6rem 1.2rem;
 }
 .btn--link:link {
   text-decoration: none;
@@ -190,12 +220,12 @@ h2 {
 .btn--link:visited {
   color: var(--black-color);
 }
-.btn--full {
+.btn--primary {
   background-color: var(--primary-color);
   color: var(--white-color);
 }
-.btn--full:hover,
-.btn--full:active {
+.btn--primary:hover,
+.btn--primary:active {
   background-color: var(--white-color);
   color: var(--primary-color);
   box-shadow: inset 0 0 0 2px var(--primary-color);
@@ -206,20 +236,12 @@ h2 {
 }
 .btn--outline:hover,
 .btn--outline:active {
-  background-color: var(--gray-color);
+  background-color: var(--white-color);
   box-shadow: inset 0 0 0 2px var(--primary-color);
 }
-.btn--icon {
-  height: auto;
-  border: 0;
-  border-radius: 0.5rem;
-  padding: 0.6rem 1.2rem;
-}
 .btn--delete {
-  border: 0;
   background-color: var(--error-color);
   color: var(--white-color);
-  /* padding: 0.5rem; */
 }
 .btn--delete:is(:hover, :active) {
   color: var(--error-color);
@@ -227,7 +249,6 @@ h2 {
   box-shadow: inset 0 0 0 0.12rem var(--error-color);
 }
 .btn--update {
-  border: 0;
   background-color: var(--warning-color);
   color: var(--white-color);
 }
@@ -245,6 +266,10 @@ h2 {
   /* height: 4.8rem; */
   padding: 1rem 2rem;
   font-size: 1.6rem;
+}
+
+.input--disabled {
+  cursor: not-allowed;
 }
 
 /*------------------------------------------------------------------------------------------------*/
@@ -275,7 +300,6 @@ h2 {
   /* max-width: var(--max-width-desktop); */
   max-width: 90rem;
   max-height: 50rem;
-  /* TODO: investigar como trabaja el min-width */
   min-width: 40rem;
   margin: 0 auto;
   display: grid;
@@ -305,25 +329,47 @@ h2 {
 }
 .login--form {
   width: 80%;
-  display: grid;
-  gap: 1rem;
+  /* display: grid;
+  gap: 1.6rem; */
 }
-.login--form > label,
+/* .login--form > label,
 .login--form > input {
   font-size: 1.6rem;
   padding: 0 1.2rem;
   cursor: pointer;
-}
-.login--form > input {
+} */
+/* .login--form > input {
   background-color: var(--gray-color);
   height: 4rem;
   border: 0;
+} */
+form :is(.form--label, .form--input) {
+  font-size: 1.6rem;
+  cursor: pointer;
 }
-.login--form > input[type="password"] {
-  margin-bottom: 1.2rem;
+fieldset {
+  border: none;
+  padding: 3.2rem 0;
 }
-.login--form > input:focus {
-  outline: var(--primary-color);
+.input--box {
+  margin: 0.8rem 0;
+}
+.input--box .form--label {
+  display: block;
+  margin-bottom: 1rem;
+}
+.input--box .form--input {
+  width: 100%;
+  min-height: 3.6rem;
+  padding: 0.6rem 1.2rem;
+  outline: none;
+  border-radius: 0.6rem;
+  border: 1px solid var(--shadow-color);
+}
+.input--box .form--input:is(:focus, :focus-visible) {
+  border-color: var(--tint--10--color);
+  outline: 0.2rem solid transparent;
+  outline-offset: 0.2rem;
 }
 
 /* LOGIN MODAL -----------------------------------------------------------------------------------*/
@@ -404,13 +450,21 @@ dialog::backdrop {
   grid-area: sidebar;
 
   background-color: var(--primary-color);
-  padding: 2rem;
+}
+.sidebar--section hr {
+  background-color: var(--white-color);
+}
+.sidebar--section hr:first-of-type {
+  margin: 0 0 2.4rem;
+}
+.sidebar--section hr:last-of-type {
+  margin: 2.4rem 0;
 }
 /* SEARCH ----------------------------------------------------------------------------------------*/
 .search {
-  margin: 0 0 1.6rem 0;
-
   position: relative;
+  width: 90%;
+  margin: 0 auto;
 }
 .search--bar {
   width: 100%;
@@ -468,16 +522,14 @@ dialog::backdrop {
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 2.4rem;
+  gap: 1.2rem;
 }
 .nav--main--list li {
-  padding: 0.45rem 0.8rem;
-  border-radius: 0.9rem;
+  padding: 0.8rem 1.6rem;
 }
 .nav--main--list li:hover,
 .nav--main--list li:active {
-  background-color: var(--shade--10--color);
-  box-shadow: inset 0 0 0 0.1rem var(--white-color);
+  background-color: var(--shade--20--color);
 }
 .nav--main--link:link,
 .nav--main--link:visited {
@@ -518,7 +570,7 @@ dialog::backdrop {
 }
 
 /* SEARCH FILTER ---------------------------------------------------------------------------------*/
-.main--section form {
+/* .main--section form {
   font-size: 1.6rem;
   display: flex;
   justify-content: center;
@@ -530,7 +582,7 @@ dialog::backdrop {
 .main--section form select {
   width: 20rem;
   height: 2.4rem;
-}
+} */
 /* TABLE -----------------------------------------------------------------------------------------*/
 .table {
   width: 100%;
@@ -560,12 +612,13 @@ tbody tr:nth-child(even) {
 tbody tr:hover {
   background-color: #fbfbfb90;
 }
-/* FORM ADD, UPDATE -----------------------------------------------------------------------------------------*/
-.main--section .form--add--product {
-  display: grid;
-  place-items: center;
-  height: 100%;
-  width: 100%;
+/* FORM ADD, UPDATE ------------------------------------------------------------------------------*/
+.form--add--product {
+  max-width: 80rem;
+  margin: 0 auto;
+}
+.form--add--product .input--box {
+  grid-column: span 2 / span 2;
 }
 
 /*------------------------------------------------------------------------------------------------*/
